<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="438dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_email"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="text"
                android:maxLines="1"
                android:fontFamily="@font/s"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_password"
                style="@style/modifiedEditText"
                android:fontFamily="@font/s"
                android:hint="@string/pass"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_address"
                style="@style/modifiedEditText"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1"
                android:fontFamily="@font/s"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_birth_day"
                style="@style/modifiedEditText"
                android:hint="@string/birthday"
                android:inputType="text"
                android:maxLines="1"
                android:fontFamily="@font/s"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_phone_number"
                style="@style/modifiedEditText"
                android:hint="@string/phonenumber"
                android:inputType="text"
                android:fontFamily="@font/s"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/info_edt_key_chain"
                style="@style/modifiedEditText"
                android:hint="@string/keychain"
                android:inputType="textMultiLine"
                android:lines="10"
                android:gravity="top"
                android:fontFamily="@font/s"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/info_btn_save"
            style="@style/loginButton"
            android:fontFamily="@font/s"
            android:layout_gravity="center"
            android:text="Save" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
