<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txttgioluu"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtthoigian"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:id="@+id/txtthoigian"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="21dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="38dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/thermometer" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/droplets" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/aqi" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="23dp"
        android:layout_toStartOf="@+id/txtthoigian"
        android:text="@string/dt" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:layout_toStartOf="@+id/txttgioluu"
        android:text="@string/h" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="22dp"
        android:layout_toStartOf="@+id/txtmdbui"
        android:text="@string/pm" />

    <TextView
        android:id="@+id/txtmdbui"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttgioluu"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:id="@+id/txtnhietdo"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/txtdam"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnhietdo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/txtclkk"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtdam"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="375dp"
        android:layout_height="9dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/black"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="156dp"
        android:layout_below="@+id/txtclkk"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txttt"
        android:layout_width="175dp"
        android:layout_height="99dp"
        android:layout_below="@+id/textView20"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="22dp"
        android:layout_toEndOf="@+id/imageView" />

</RelativeLayout>