<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@drawable/tuybiennut3">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="637dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/tuybn4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="263dp"
            android:layout_height="93dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="62dp"
            android:gravity="center"
            android:text="@string/dangnhap"
            android:textColor="#F1CB0C"
            android:textSize="50dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/use"
            android:layout_width="338dp"
            android:layout_height="59dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="37dp"
            android:ems="10"
            android:hint="@string/xnu"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="338dp"
            android:layout_height="59dp"
            android:layout_below="@+id/use"
            android:layout_alignParentStart="true"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="37dp"
            android:ems="10"
            android:hint="@string/xnp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/use" />

        <Button
            android:id="@+id/button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/tuybn4"
            android:text="@string/dangnhap"
            android:textColor="#F1CB0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btndangkytk"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/tuybn4"
            android:text="Sign up"
            android:textColor="#F1CB0C" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="162dp"
            android:layout_height="112dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="94dp"
            android:src="@drawable/us" />

    </RelativeLayout>

</RelativeLayout>
